# AIML

./: .env  .gitignore  main.py  pyproject.toml
All_about_FastAPI/: Dockerfile  README.md
Create_Your_First_Python_App/: main.py  mycode.py  pyproject.toml
